--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
   "name": "getaddress-autocomplete-native",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "GetAddress.io - Native Autocomplete Plug-In",
-  "main": "./dist/getaddress-autocomplete-native.mjs",
+  "main": "./lib/Index",
   "type": "module",
-  "types": "./dist/getaddress-autocomplete-native.d.ts",
+  "types": "./lib/Index",
+  "typings": "./lib/Index",
   "homepage": "https://getaddress.io",
   "repository": {
     "type": "git",
     "url": "https://github.com/getAddress/autocomplete-native"
   },
+  "files": [
+    "./lib"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cleanDist": "rimraf dist/*",
     "rollup": "rollup -c",
-    "build": "npm-run-all cleanDist rollup"
+    "compile":"tsc -p .",
+    "build": "npm-run-all cleanDist compile rollup"
   },
   "keywords": ["postcode","getAddress","address","plugin","UK","autocomplete","datalist"],
   "author": "getAddress()",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "rollup": "^2.64.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^2.0.5",
-    "typescript": "4.5.4"
+    "rollup": "^4.13.0",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "getaddress-api": "^1.3.0"
+    "getaddress-api": "^1.4.3"
   }
 }
