--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "getaddress-autocomplete-native",
-  "version": "2.1.0",
+  "version": "2.2.1",
   "description": "GetAddress.io - Native Autocomplete Plug-In",
   "main": "./lib/Index",
   "type": "module",
@@ -20,8 +20,7 @@
     "rollup": "rollup -c",
     "compile": "tsc -p .",
     "build": "npm-run-all cleanDist compile rollup",
-    "watchRollup": "rollup -c --watch",
-    "watchTs": "tsc -p . --watch"
+    "watch": "rollup -c --watch"
   },
   "keywords": [
     "postcode",
@@ -37,9 +36,11 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^4.13.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.4.3"
   },
   "dependencies": {
